// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ExperienceSection > all details 1`] = `
<body>
  <div>
    <section
      class=""
    >
      <h2
        class="mt-3 mb-4 text-center text-4xl font-bold text-sky-300 md:text-left print:text-left print:text-3xl print:font-semibold"
      >
        Experience
      </h2>
      <h3
        class="mt-5 mb-0 text-3xl text-sky-400"
      >
        Foo LLC
      </h3>
      <div
        class="text-sm text-zinc-300 mb-3"
      >
        Head Muffin Licker | Apr 2004  - Feb 2007 | Seasonal | Hybrid
      </div>
    </section>
  </div>
</body>
`;

exports[`ExperienceSection > empty resume 1`] = `
<body>
  <div />
</body>
`;

exports[`ExperienceSection > full 1`] = `
<body>
  <div>
    <section
      class=""
    >
      <h2
        class="mt-3 mb-4 text-center text-4xl font-bold text-sky-300 md:text-left print:text-left print:text-3xl print:font-semibold"
      >
        Experience
      </h2>
      <h3
        class="mt-5 mb-0 text-3xl text-sky-400"
      >
        Foo LLC
      </h3>
      <div
        class="text-sm text-zinc-300 mb-3"
      >
        Head Muffin Licker | Apr 2004  - Feb 2007 | Seasonal | Hybrid
      </div>
      <div
        class="typography mb-3"
      >
        <p>
          I did things.
        </p>
      </div>
      <div
        class="typography mb-3 text-sm"
      >
        <ul>
          <li>
            Jumped.
          </li>
          <li>
            Rolled.
          </li>
        </ul>
      </div>
      <div
        class="typography mb-3"
      >
        Skills I 
        used
         during this time include
        d 
        This
        , and 
        That
        .
      </div>
    </section>
  </div>
</body>
`;

exports[`ExperienceSection > highlights 1`] = `
<body>
  <div>
    <section
      class=""
    >
      <h2
        class="mt-3 mb-4 text-center text-4xl font-bold text-sky-300 md:text-left print:text-left print:text-3xl print:font-semibold"
      >
        Experience
      </h2>
      <h3
        class="mt-5 mb-0 text-3xl text-sky-400"
      >
        Foo LLC
      </h3>
      <div
        class="typography mb-3 text-sm"
      >
        <ul>
          <li>
            Jumped.
          </li>
          <li>
            Rolled.
          </li>
        </ul>
      </div>
    </section>
  </div>
</body>
`;

exports[`ExperienceSection > multiples with required fields only 1`] = `
<body>
  <div>
    <section
      class=""
    >
      <h2
        class="mt-3 mb-4 text-center text-4xl font-bold text-sky-300 md:text-left print:text-left print:text-3xl print:font-semibold"
      >
        Experience
      </h2>
      <h3
        class="mt-5 mb-0 text-3xl text-sky-400"
      >
        Foo LLC
      </h3>
      <h3
        class="mt-5 mb-0 text-3xl text-sky-400"
      >
        Bar and Daughters
      </h3>
    </section>
  </div>
</body>
`;

exports[`ExperienceSection > skills 1`] = `
<body>
  <div>
    <section
      class=""
    >
      <h2
        class="mt-3 mb-4 text-center text-4xl font-bold text-sky-300 md:text-left print:text-left print:text-3xl print:font-semibold"
      >
        Experience
      </h2>
      <h3
        class="mt-5 mb-0 text-3xl text-sky-400"
      >
        Foo LLC
      </h3>
      <div
        class="typography mb-3"
      >
        Skills I 
        am using
         during this time include
         
        This
        , and 
        That
        .
      </div>
    </section>
  </div>
</body>
`;

exports[`ExperienceSection > startDate 1`] = `
<body>
  <div>
    <section
      class=""
    >
      <h2
        class="mt-3 mb-4 text-center text-4xl font-bold text-sky-300 md:text-left print:text-left print:text-3xl print:font-semibold"
      >
        Experience
      </h2>
      <h3
        class="mt-5 mb-0 text-3xl text-sky-400"
      >
        Foo LLC
      </h3>
      <div
        class="text-sm text-zinc-300 mb-3"
      >
        Oct 1978  - Now
      </div>
    </section>
  </div>
</body>
`;

exports[`ExperienceSection > startDate and endDate 1`] = `
<body>
  <div>
    <section
      class=""
    >
      <h2
        class="mt-3 mb-4 text-center text-4xl font-bold text-sky-300 md:text-left print:text-left print:text-3xl print:font-semibold"
      >
        Experience
      </h2>
      <h3
        class="mt-5 mb-0 text-3xl text-sky-400"
      >
        Foo LLC
      </h3>
      <div
        class="text-sm text-zinc-300 mb-3"
      >
        Apr 2004  - Feb 2007
      </div>
    </section>
  </div>
</body>
`;

exports[`ExperienceSection > summary 1`] = `
<body>
  <div>
    <section
      class=""
    >
      <h2
        class="mt-3 mb-4 text-center text-4xl font-bold text-sky-300 md:text-left print:text-left print:text-3xl print:font-semibold"
      >
        Experience
      </h2>
      <h3
        class="mt-5 mb-0 text-3xl text-sky-400"
      >
        Foo LLC
      </h3>
      <div
        class="typography mb-3"
      >
        <p>
          I did things.
        </p>
      </div>
    </section>
  </div>
</body>
`;
